--- a/thesis/acronyms.tex
+++ b/thesis/acronyms.tex
@@ -12,6 +12,7 @@
 \newacronym{asr}{ASR}{automatic speech recognition}
 \newacronym{axe}{AXE}{aligned cross-entropy}
 \newacronym{bleu}{BLEU}{bilingual evaluation understudy}
+\newacronym{bon}{BoN}{bag-of-ngrams}
 \newacronym{bpe}{BPE}{byte-pair encoding}
 \newacronym{cmlm}{CMLM}{conditional masked language model}
 \newacronym{cnn}{CNN}{convolutional neural network}
