--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -1,3 +1,25 @@
+@misc{qian2021volctrans,
+      title={The Volctrans GLAT System: Non-autoregressive Translation Meets WMT21},
+      author={Lihua Qian and Yi Zhou and Zaixiang Zheng and Yaoming Zhu and Zehui Lin and Jiangtao Feng and Shanbo Cheng and Lei Li and Mingxuan Wang and Hao Zhou},
+      year={2021},
+      eprint={2109.11247},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+
+@article{kuhn1955hungarian,
+  title={The Hungarian method for the assignment problem},
+  author={Kuhn, Harold W},
+  journal={Naval research logistics quarterly},
+  volume={2},
+  number={1-2},
+  pages={83--97},
+  year={1955},
+  publisher={Wiley Online Library}
+}
+
+
 @article{popel-bojar-2018-training,
  journal = {The Prague Bulletin of Mathematical Linguistics},
  title = {{Training Tips for the Transformer Model}},
@@ -298,16 +320,6 @@ author={
       eprint={2004.03227},
       archivePrefix={arXiv},
       primaryClass={cs.CL}
-}
-
-@article{qian2020glancing,
-  title =	 {Glancing Transformer for Non-Autoregressive Neural Machine
-                  Translation},
-  author =	 {L. Qian and Hao Zhou and Yu Bao and Mingxuan Wang and Lin Qiu
-                  and W. Zhang and Y. Yu and Lei Li},
-  journal =	 {ArXiv},
-  year =	 {2020},
-  volume =	 {abs/2008.07905}
 }
 
 @InProceedings{sun2020em,
